src/test/deca/context/invalid/ContextAvecObjet/ManipulationClasse/intEquals.deca
//Description
//  test equals avec un argument de type int
//
//Résultat
//  Erreur contextuelle ligne 12
//  Argument 1 de type int ne correspond au type du 1e argument de la méthode equals

class A{}
{
    A a = new A();
    int x = 0;
    a.equals(x);
}